--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,200 @@
-boto3
-botocore
-urllib3
-setuptools
-requests
-s3transfer
-google-api-core
-charset-normalizer
-certifi
-python-dateutil
-idna
-typing-extensions
-six
-pyyaml
-cryptography
-awscli
-numpy
-wheel
-pyparsing
-rsa
-packaging
-pyasn1
-pip
-pytz
-jmespath
-pyjwt
-importlib-metadata
-pandas
-zipp
-protobuf
-colorama
-oauthlib
-attrs
-click
-cffi
-requests-oauthlib
-markupsafe
-jinja2
-pycparser
-google-auth
-docutils
-cachetools
-googleapis-common-protos
-pyarrow
-pyasn1-modules
-aiobotocore
-wrapt
-lxml
-psutil
-google-cloud-bigquery
-isodate
-grpcio
-sqlalchemy
-fsspec
-azure-core
-werkzeug
-async-timeout
-s3fs
-google-cloud-storage
-decorator
-aiohttp
-flask
-chardet
-yarl
-multidict
-pyopenssl
-greenlet
-msrest
-tomli
-jsonschema
-soupsieve
-filelock
-py
-scipy
-frozenlist
-beautifulsoup4
-pytest
-pluggy
-importlib-resources
-pillow
-google-cloud-core
-asn1crypto
-platformdirs
-aiosignal
-tqdm
-tabulate
-google-resumable-media
-pyrsistent
-websocket-client
-openpyxl
-et-xmlfile
-azure-storage-blob
-itsdangerous
-proto-plus
-virtualenv
-azure-common
-future
-iniconfig
-psycopg2-binary
-pydantic
+scikit-learn
+pygments
+requests-toolbelt
+toml
+pymysql
+mypy-extensions
+pynacl
+deprecated
+httplib2
+bcrypt
+google-auth-oauthlib
+distlib
+paramiko
+py4j
+docker
+gitpython
+cloudpickle
+coverage
+matplotlib
+smmap
+grpcio-status
+redis
+gitdb
+sqlparse
+cython
+google-crc32c
+msal
+more-itertools
+pyspark
+tzdata
+google-api-python-client
+termcolor
+pycryptodomex
+gunicorn
+portalocker
+kiwisolver
+sniffio
+msal-extensions
+pycodestyle
+pexpect
+cycler
+ptyprocess
+adal
+keyring
+msgpack
+uritemplate
+wcwidth
+pathspec
+pymongo
+regex
+scramp
+snowflake-connector-python
+webencodings
+alembic
+oscrypto
+markdown
+mccabe
+cfn-lint
+dill
+mako
+pyodbc
+tzlocal
+ply
+isort
+azure-identity
+datadog
+joblib
+google-cloud-pubsub
+asynctest
+marshmallow
+h11
+oauth2client
+absl-py
+pg8000
+secretstorage
+tenacity
+xlrd
+tornado
+xmltodict
+google-auth-httplib2
+jeepney
+prompt-toolkit
+ruamel-yaml
+threadpoolctl
+redshift-connector
+pyathena
+databricks-cli
+networkx
+sentry-sdk
+pbr
+tensorflow-serving-api
+tensorboard
+prometheus-client
+jsonpath-ng
+typing-inspect
+backoff
+ruamel-yaml-clib
+python-dotenv
+requests-aws4auth
+pkginfo
+grpc-google-iam-v1
+nest-asyncio
+defusedxml
+toolz
+ipython
+dnspython
+flake8
+tensorflow
+pyflakes
+traitlets
+progressbar2
+python-utils
+msrestazure
+elasticsearch
+cached-property
+simplejson
+pkgutil-resolve-name
+pytz-deprecation-shim
+google-cloud-secret-manager
+backports-zoneinfo
+entrypoints
+fonttools
+jaraco-classes
+awswrangler
+argcomplete
+psycopg2
+google-cloud-bigquery-storage
+jedi
+tomlkit
+pycryptodome
+mlflow
+sortedcontainers
+aioitertools
+libcst
+pytest-cov
+parso
+anyio
+gast
+pickleshare
+apache-beam
+aiofiles
+backcall
+lazy-object-proxy
+prometheus-flask-exporter
+tensorflow-estimator
+poetry-core
+opensearch-py
+setuptools-scm
+h5py
+html5lib
+babel
+querystring-parser
+lockfile
+black
+pyzmq
+azure-storage-common
+mysql-connector-python
+astroid
+bleach
+rich
+imageio
+smart-open
+cachecontrol
+pysocks
+configparser
+rfc3986
+google-pasta
+jupyter-client
+matplotlib-inline
+dataclasses
+pylint
+docopt
+fastavro
+ujson
+nltk
+cattrs
+azure-nspkg
+typed-ast
+marshmallow-enum
+nbconvert
+zope-interface
+unidecode
+azure-mgmt-resource
+requests-file
+ipykernel
+jsonpointer
+mock
+humanfriendly
+futures
+kubernetes
+google-cloud-dlp
+text-unidecode
+contextlib2
+aioconsole
+appdirs
+xlsxwriter
+selenium
+pandas-gbq
+mypy
+google-cloud-logging
