--- a/requirements.txt
+++ b/requirements.txt
@@ -1,200 +1,100 @@
-scikit-learn
-pygments
-requests-toolbelt
-toml
-pymysql
-mypy-extensions
-pynacl
-deprecated
-httplib2
-bcrypt
-google-auth-oauthlib
-distlib
-paramiko
-py4j
-docker
-gitpython
-cloudpickle
-coverage
-matplotlib
-smmap
-grpcio-status
-redis
-gitdb
-sqlparse
-cython
-google-crc32c
-msal
-more-itertools
-pyspark
-tzdata
-google-api-python-client
-termcolor
-pycryptodomex
-gunicorn
-portalocker
-kiwisolver
-sniffio
-msal-extensions
-pycodestyle
-pexpect
-cycler
-ptyprocess
-adal
-keyring
-msgpack
-uritemplate
-wcwidth
-pathspec
-pymongo
-regex
-scramp
-snowflake-connector-python
-webencodings
-alembic
-oscrypto
-markdown
-mccabe
-cfn-lint
-dill
-mako
-pyodbc
-tzlocal
-ply
-isort
-azure-identity
-datadog
-joblib
-google-cloud-pubsub
-asynctest
-marshmallow
-h11
-oauth2client
-absl-py
-pg8000
-secretstorage
-tenacity
-xlrd
-tornado
-xmltodict
-google-auth-httplib2
-jeepney
-prompt-toolkit
-ruamel-yaml
-threadpoolctl
-redshift-connector
-pyathena
-databricks-cli
-networkx
-sentry-sdk
-pbr
-tensorflow-serving-api
-tensorboard
-prometheus-client
-jsonpath-ng
-typing-inspect
-backoff
-ruamel-yaml-clib
-python-dotenv
-requests-aws4auth
-pkginfo
-grpc-google-iam-v1
-nest-asyncio
-defusedxml
-toolz
-ipython
-dnspython
-flake8
-tensorflow
-pyflakes
-traitlets
-progressbar2
-python-utils
-msrestazure
-elasticsearch
-cached-property
-simplejson
-pkgutil-resolve-name
-pytz-deprecation-shim
-google-cloud-secret-manager
-backports-zoneinfo
-entrypoints
-fonttools
-jaraco-classes
-awswrangler
-argcomplete
-psycopg2
-google-cloud-bigquery-storage
-jedi
-tomlkit
-pycryptodome
-mlflow
-sortedcontainers
-aioitertools
-libcst
-pytest-cov
-parso
-anyio
-gast
-pickleshare
-apache-beam
-aiofiles
-backcall
-lazy-object-proxy
-prometheus-flask-exporter
-tensorflow-estimator
-poetry-core
-opensearch-py
-setuptools-scm
-h5py
-html5lib
-babel
-querystring-parser
-lockfile
-black
-pyzmq
-azure-storage-common
-mysql-connector-python
-astroid
-bleach
-rich
-imageio
-smart-open
-cachecontrol
-pysocks
-configparser
-rfc3986
-google-pasta
-jupyter-client
-matplotlib-inline
-dataclasses
-pylint
-docopt
-fastavro
-ujson
-nltk
-cattrs
-azure-nspkg
-typed-ast
-marshmallow-enum
-nbconvert
-zope-interface
-unidecode
-azure-mgmt-resource
-requests-file
-ipykernel
-jsonpointer
-mock
-humanfriendly
-futures
-kubernetes
-google-cloud-dlp
-text-unidecode
-contextlib2
-aioconsole
-appdirs
-xlsxwriter
-selenium
-pandas-gbq
-mypy
-google-cloud-logging
+pydata-google-auth
+httpx
+applicationinsights
+types-cryptography
+jsonpickle
+apache-airflow
+shellingham
+jsonpatch
+notebook
+websockets
+jupyter-core
+numba
+httpcore
+keras
+pendulum
+uvloop
+keras-preprocessing
+typing
+distro
+mistune
+poetry
+httptools
+aenum
+azure-mgmt-core
+opt-einsum
+cleo
+seaborn
+statsmodels
+boto
+debugpy
+uvicorn
+asgiref
+graphviz
+confluent-kafka
+commonmark
+send2trash
+llvmlite
+ipython-genutils
+gspread
+tensorboard-plugin-wit
+starlette
+pylev
+pysftp
+crashtest
+pytzdata
+nbformat
+cachy
+emoji
+flatbuffers
+shapely
+fastapi
+altair
+python-slugify
+xgboost
+thrift
+watchtower
+retry
+nbclient
+opencensus
+opencensus-context
+fastjsonschema
+kafka-python
+uamqp
+torch
+tensorboard-data-server
+azure-mgmt-storage
+grpcio-tools
+patsy
+django
+blinker
+colorlog
+gremlinpython
+azure-keyvault-secrets
+ijson
+retrying
+transformers
+semver
+enum34
+pytest-runner
+gcsfs
+pydot
+pygithub
+avro-python3
+snowflake-sqlalchemy
+lightgbm
+exceptiongroup
+click-plugins
+ipywidgets
+plotly
+widgetsnbextension
+pandocfilters
+sagemaker
+python-editor
+responses
+pathlib2
+arrow
+argon2-cffi
+fuzzywuzzy
+async-generator
+sphinx
