--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,200 @@
-pydata-google-auth
-httpx
-applicationinsights
-types-cryptography
-jsonpickle
-apache-airflow
-shellingham
-jsonpatch
-notebook
-websockets
-jupyter-core
-numba
-httpcore
-keras
-pendulum
-uvloop
-keras-preprocessing
-typing
-distro
-mistune
-poetry
-httptools
-aenum
-azure-mgmt-core
-opt-einsum
-cleo
-seaborn
-statsmodels
-boto
-debugpy
-uvicorn
-asgiref
-graphviz
-confluent-kafka
-commonmark
-send2trash
-llvmlite
-ipython-genutils
-gspread
-tensorboard-plugin-wit
-starlette
-pylev
-pysftp
-crashtest
-pytzdata
-nbformat
-cachy
-emoji
-flatbuffers
-shapely
-fastapi
-altair
-python-slugify
-xgboost
-thrift
-watchtower
-retry
-nbclient
-opencensus
-opencensus-context
-fastjsonschema
-kafka-python
-uamqp
-torch
-tensorboard-data-server
-azure-mgmt-storage
-grpcio-tools
-patsy
-django
-blinker
-colorlog
-gremlinpython
-azure-keyvault-secrets
-ijson
-retrying
-transformers
-semver
-enum34
-pytest-runner
-gcsfs
-pydot
-pygithub
-avro-python3
-snowflake-sqlalchemy
-lightgbm
-exceptiongroup
-click-plugins
-ipywidgets
-plotly
-widgetsnbextension
-pandocfilters
-sagemaker
-python-editor
-responses
-pathlib2
-arrow
-argon2-cffi
-fuzzywuzzy
-async-generator
-sphinx
+tokenizers
+python-http-client
+azure-mgmt-keyvault
+slack-sdk
+croniter
+snowballstemmer
+azure-keyvault
+astunparse
+watchdog
+terminado
+jupyterlab-pygments
+stringcase
+azure-storage-queue
+tinycss2
+knack
+typer
+google-cloud-bigtable
+argon2-cffi-bindings
+azure-mgmt-authorization
+dulwich
+deepdiff
+pipenv
+bs4
+jupyterlab-widgets
+setproctitle
+dataclasses-json
+opencensus-ext-azure
+prettytable
+sendgrid
+pycountry
+azure-datalake-store
+pytest-mock
+inflection
+tldextract
+faker
+azure-mgmt-containerregistry
+azure-storage-file-datalake
+antlr4-python3-runtime
+python-json-logger
+opencv-python
+gevent
+slackclient
+atomicwrites
+sklearn
+azure-cosmos
+aws-cdk-aws-glue
+aws-cdk-aws-logs-destinations
+hvac
+brotli
+delta-spark
+azureml-core
+tensorflow-metadata
+scandir
+virtualenv-clone
+moto
+argparse
+hdfs
+azure-graphrbac
+dask
+torchvision
+typeguard
+multiprocess
+identify
+ecdsa
+sentencepiece
+kombu
+pywavelets
+azure-keyvault-keys
+celery
+pep517
+amqp
+nodeenv
+imagesize
+crcmod
+huggingface-hub
+maxminddb
+pyproj
+email-validator
+executing
+poetry-plugin-export
+asttokens
+flask-wtf
+overrides
+pre-commit
+zeep
+pycrypto
+pytest-forked
+authlib
+alabaster
+great-expectations
+execnet
+pytest-xdist
+cfgv
+astor
+wsproto
+azure-cosmosdb-table
+google-cloud-pubsublite
+stevedore
+python-magic
+google-cloud-datastore
+stack-data
+ezfnsetup
+geoip2
+unicodecsv
+flask-appbuilder
+python-jose
+azure-eventhub
+billiard
+constructs
+sphinxcontrib-serializinghtml
+vine
+azure-cosmosdb-nspkg
+flask-cors
+tensorflow-io-gcs-filesystem
+tox
+zope-event
+sphinxcontrib-htmlhelp
+sphinxcontrib-jsmath
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-qthelp
+pure-eval
+libclang
+ansible
+ordered-set
+convertdate
+xlwt
+scikit-image
+holidays
+spacy
+fasteners
+nose
+ipaddress
+marshmallow-sqlalchemy
+pymeeus
+gensim
+monotonic
+aws-sam-translator
+ratelimit
+trio
+azure-mgmt-network
+korean-lunar-calendar
+tblib
+freezegun
+outcome
+connexion
+dateparser
+orjson
+semantic-version
+azure-mgmt-nspkg
+ndg-httpsclient
+junit-xml
+trio-websocket
+cligj
+munch
+keras-applications
+jdcal
+geopy
+promise
+parsedatetime
+azure-mgmt-datalake-nspkg
+iso8601
+fire
+flask-sqlalchemy
+partd
+google-cloud-firestore
+humanize
+thinc
+sshtunnel
+locket
+tfx-bsl
+inflect
+distributed
+hijri-converter
+ua-parser
+pymssql
+pycron
+simple-salesforce
+python-gnupg
+python-levenshtein
+watergrid
+starkbank-ecdsa
+azure-mgmt-compute
+sqlalchemy-utils
+azure-cli-core
+pycairo
+azure-servicebus
+flask-login
+pathos
+djangorestframework
+srsly
+blis
+singledispatch
+google-cloud-spanner
+pygobject
+murmurhash
+avro
+pyperclip
+phonenumbers
+tensorflow-transform
