--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,600 @@
+boto3
+botocore
+urllib3
+setuptools
+requests
+s3transfer
+google-api-core
+charset-normalizer
+certifi
+python-dateutil
+idna
+typing-extensions
+six
+pyyaml
+cryptography
+awscli
+numpy
+wheel
+pyparsing
+rsa
+packaging
+pyasn1
+pip
+pytz
+jmespath
+pyjwt
+importlib-metadata
+pandas
+zipp
+protobuf
+colorama
+oauthlib
+attrs
+click
+cffi
+requests-oauthlib
+markupsafe
+jinja2
+pycparser
+google-auth
+docutils
+cachetools
+googleapis-common-protos
+pyarrow
+pyasn1-modules
+aiobotocore
+wrapt
+lxml
+psutil
+google-cloud-bigquery
+isodate
+grpcio
+sqlalchemy
+fsspec
+azure-core
+werkzeug
+async-timeout
+s3fs
+google-cloud-storage
+decorator
+aiohttp
+flask
+chardet
+yarl
+multidict
+pyopenssl
+greenlet
+msrest
+tomli
+jsonschema
+soupsieve
+filelock
+py
+scipy
+frozenlist
+beautifulsoup4
+pytest
+pluggy
+importlib-resources
+pillow
+google-cloud-core
+asn1crypto
+platformdirs
+aiosignal
+tqdm
+tabulate
+google-resumable-media
+pyrsistent
+websocket-client
+openpyxl
+et-xmlfile
+azure-storage-blob
+itsdangerous
+proto-plus
+virtualenv
+azure-common
+future
+iniconfig
+psycopg2-binary
+pydantic
+scikit-learn
+pygments
+requests-toolbelt
+toml
+pymysql
+mypy-extensions
+pynacl
+deprecated
+httplib2
+bcrypt
+google-auth-oauthlib
+distlib
+paramiko
+py4j
+docker
+gitpython
+cloudpickle
+coverage
+matplotlib
+smmap
+grpcio-status
+redis
+gitdb
+sqlparse
+cython
+google-crc32c
+msal
+more-itertools
+pyspark
+tzdata
+google-api-python-client
+termcolor
+pycryptodomex
+gunicorn
+portalocker
+kiwisolver
+sniffio
+msal-extensions
+pycodestyle
+pexpect
+cycler
+ptyprocess
+adal
+keyring
+msgpack
+uritemplate
+wcwidth
+pathspec
+pymongo
+regex
+scramp
+snowflake-connector-python
+webencodings
+alembic
+oscrypto
+markdown
+mccabe
+cfn-lint
+dill
+mako
+pyodbc
+tzlocal
+ply
+isort
+azure-identity
+datadog
+joblib
+google-cloud-pubsub
+asynctest
+marshmallow
+h11
+oauth2client
+absl-py
+pg8000
+secretstorage
+tenacity
+xlrd
+tornado
+xmltodict
+google-auth-httplib2
+jeepney
+prompt-toolkit
+ruamel-yaml
+threadpoolctl
+redshift-connector
+pyathena
+databricks-cli
+networkx
+sentry-sdk
+pbr
+tensorflow-serving-api
+tensorboard
+prometheus-client
+jsonpath-ng
+typing-inspect
+backoff
+ruamel-yaml-clib
+python-dotenv
+requests-aws4auth
+pkginfo
+grpc-google-iam-v1
+nest-asyncio
+defusedxml
+toolz
+ipython
+dnspython
+flake8
+tensorflow
+pyflakes
+traitlets
+progressbar2
+python-utils
+msrestazure
+elasticsearch
+cached-property
+simplejson
+pkgutil-resolve-name
+pytz-deprecation-shim
+google-cloud-secret-manager
+backports-zoneinfo
+entrypoints
+fonttools
+jaraco-classes
+awswrangler
+argcomplete
+psycopg2
+google-cloud-bigquery-storage
+jedi
+tomlkit
+pycryptodome
+mlflow
+sortedcontainers
+aioitertools
+libcst
+pytest-cov
+parso
+anyio
+gast
+pickleshare
+apache-beam
+aiofiles
+backcall
+lazy-object-proxy
+prometheus-flask-exporter
+tensorflow-estimator
+poetry-core
+opensearch-py
+setuptools-scm
+h5py
+html5lib
+babel
+querystring-parser
+lockfile
+black
+pyzmq
+azure-storage-common
+mysql-connector-python
+astroid
+bleach
+rich
+imageio
+smart-open
+cachecontrol
+pysocks
+configparser
+rfc3986
+google-pasta
+jupyter-client
+matplotlib-inline
+dataclasses
+pylint
+docopt
+fastavro
+ujson
+nltk
+cattrs
+azure-nspkg
+typed-ast
+marshmallow-enum
+nbconvert
+zope-interface
+unidecode
+azure-mgmt-resource
+requests-file
+ipykernel
+jsonpointer
+mock
+humanfriendly
+futures
+kubernetes
+google-cloud-dlp
+text-unidecode
+contextlib2
+aioconsole
+appdirs
+xlsxwriter
+selenium
+pandas-gbq
+mypy
+google-cloud-logging
+pydata-google-auth
+httpx
+applicationinsights
+types-cryptography
+jsonpickle
+apache-airflow
+shellingham
+jsonpatch
+notebook
+websockets
+jupyter-core
+numba
+httpcore
+keras
+pendulum
+uvloop
+keras-preprocessing
+typing
+distro
+mistune
+poetry
+httptools
+aenum
+azure-mgmt-core
+opt-einsum
+cleo
+seaborn
+statsmodels
+boto
+debugpy
+uvicorn
+asgiref
+graphviz
+confluent-kafka
+commonmark
+send2trash
+llvmlite
+ipython-genutils
+gspread
+tensorboard-plugin-wit
+starlette
+pylev
+pysftp
+crashtest
+pytzdata
+nbformat
+cachy
+emoji
+flatbuffers
+shapely
+fastapi
+altair
+python-slugify
+xgboost
+thrift
+watchtower
+retry
+nbclient
+opencensus
+opencensus-context
+fastjsonschema
+kafka-python
+uamqp
+torch
+tensorboard-data-server
+azure-mgmt-storage
+grpcio-tools
+patsy
+django
+blinker
+colorlog
+gremlinpython
+azure-keyvault-secrets
+ijson
+retrying
+transformers
+semver
+enum34
+pytest-runner
+gcsfs
+pydot
+pygithub
+avro-python3
+snowflake-sqlalchemy
+lightgbm
+exceptiongroup
+click-plugins
+ipywidgets
+plotly
+widgetsnbextension
+pandocfilters
+sagemaker
+python-editor
+responses
+pathlib2
+arrow
+argon2-cffi
+fuzzywuzzy
+async-generator
+sphinx
+tokenizers
+python-http-client
+azure-mgmt-keyvault
+slack-sdk
+croniter
+snowballstemmer
+azure-keyvault
+astunparse
+watchdog
+terminado
+jupyterlab-pygments
+stringcase
+azure-storage-queue
+tinycss2
+knack
+typer
+google-cloud-bigtable
+argon2-cffi-bindings
+azure-mgmt-authorization
+dulwich
+deepdiff
+pipenv
+bs4
+jupyterlab-widgets
+setproctitle
+dataclasses-json
+opencensus-ext-azure
+prettytable
+sendgrid
+pycountry
+azure-datalake-store
+pytest-mock
+inflection
+tldextract
+faker
+azure-mgmt-containerregistry
+azure-storage-file-datalake
+antlr4-python3-runtime
+python-json-logger
+opencv-python
+gevent
+slackclient
+atomicwrites
+sklearn
+azure-cosmos
+aws-cdk-aws-glue
+aws-cdk-aws-logs-destinations
+hvac
+brotli
+delta-spark
+azureml-core
+tensorflow-metadata
+scandir
+virtualenv-clone
+moto
+argparse
+hdfs
+azure-graphrbac
+dask
+torchvision
+typeguard
+multiprocess
+identify
+ecdsa
+sentencepiece
+kombu
+pywavelets
+azure-keyvault-keys
+celery
+pep517
+amqp
+nodeenv
+imagesize
+crcmod
+huggingface-hub
+maxminddb
+pyproj
+email-validator
+executing
+poetry-plugin-export
+asttokens
+flask-wtf
+overrides
+pre-commit
+zeep
+pycrypto
+pytest-forked
+authlib
+alabaster
+great-expectations
+execnet
+pytest-xdist
+cfgv
+astor
+wsproto
+azure-cosmosdb-table
+google-cloud-pubsublite
+stevedore
+python-magic
+google-cloud-datastore
+stack-data
+ezfnsetup
+geoip2
+unicodecsv
+flask-appbuilder
+python-jose
+azure-eventhub
+billiard
+constructs
+sphinxcontrib-serializinghtml
+vine
+azure-cosmosdb-nspkg
+flask-cors
+tensorflow-io-gcs-filesystem
+tox
+zope-event
+sphinxcontrib-htmlhelp
+sphinxcontrib-jsmath
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-qthelp
+pure-eval
+libclang
+ansible
+ordered-set
+convertdate
+xlwt
+scikit-image
+holidays
+spacy
+fasteners
+nose
+ipaddress
+marshmallow-sqlalchemy
+pymeeus
+gensim
+monotonic
+aws-sam-translator
+ratelimit
+trio
+azure-mgmt-network
+korean-lunar-calendar
+tblib
+freezegun
+outcome
+connexion
+dateparser
+orjson
+semantic-version
+azure-mgmt-nspkg
+ndg-httpsclient
+junit-xml
+trio-websocket
+cligj
+munch
+keras-applications
+jdcal
+geopy
+promise
+parsedatetime
+azure-mgmt-datalake-nspkg
+iso8601
+fire
+flask-sqlalchemy
+partd
+google-cloud-firestore
+humanize
+thinc
+sshtunnel
+locket
 tfx-bsl
+inflect
+distributed
+hijri-converter
+ua-parser
+pymssql
+pycron
+simple-salesforce
+python-gnupg
+python-levenshtein
+watergrid
+starkbank-ecdsa
+azure-mgmt-compute
+sqlalchemy-utils
+azure-cli-core
+pycairo
+azure-servicebus
+flask-login
+pathos
+djangorestframework
+srsly
+blis
+singledispatch
+google-cloud-spanner
+pygobject
+murmurhash
+avro
+pyperclip
+phonenumbers
+tensorflow-transform
