--- a/requirements.txt
+++ b/requirements.txt
@@ -1,600 +1,600 @@
-boto3
-botocore
-urllib3
-setuptools
-requests
-s3transfer
-google-api-core
-charset-normalizer
-certifi
-python-dateutil
-idna
-typing-extensions
-six
-pyyaml
-cryptography
-awscli
-numpy
-wheel
-pyparsing
-rsa
-packaging
-pyasn1
-pip
-pytz
-jmespath
-pyjwt
-importlib-metadata
-pandas
-zipp
-protobuf
-colorama
-oauthlib
-attrs
-click
-cffi
-requests-oauthlib
-markupsafe
-jinja2
-pycparser
-google-auth
-docutils
-cachetools
-googleapis-common-protos
-pyarrow
-pyasn1-modules
-aiobotocore
-wrapt
-lxml
-psutil
-google-cloud-bigquery
-isodate
-grpcio
-sqlalchemy
-fsspec
-azure-core
-werkzeug
-async-timeout
-s3fs
-google-cloud-storage
-decorator
-aiohttp
-flask
-chardet
-yarl
-multidict
-pyopenssl
-greenlet
-msrest
-tomli
-jsonschema
-soupsieve
-filelock
-py
-scipy
-frozenlist
-beautifulsoup4
-pytest
-pluggy
-importlib-resources
-pillow
-google-cloud-core
-asn1crypto
-platformdirs
-aiosignal
-tqdm
-tabulate
-google-resumable-media
-pyrsistent
-websocket-client
-openpyxl
-et-xmlfile
-azure-storage-blob
-itsdangerous
-proto-plus
-virtualenv
-azure-common
-future
-iniconfig
-psycopg2-binary
-pydantic
-scikit-learn
-pygments
-requests-toolbelt
-toml
-pymysql
-mypy-extensions
-pynacl
-deprecated
-httplib2
-bcrypt
-google-auth-oauthlib
-distlib
-paramiko
-py4j
-docker
-gitpython
-cloudpickle
-coverage
-matplotlib
-smmap
-grpcio-status
-redis
-gitdb
-sqlparse
-cython
-google-crc32c
-msal
-more-itertools
-pyspark
-tzdata
-google-api-python-client
-termcolor
-pycryptodomex
-gunicorn
-portalocker
-kiwisolver
-sniffio
-msal-extensions
-pycodestyle
-pexpect
-cycler
-ptyprocess
-adal
-keyring
-msgpack
-uritemplate
-wcwidth
-pathspec
-pymongo
-regex
-scramp
-snowflake-connector-python
-webencodings
-alembic
-oscrypto
-markdown
-mccabe
-cfn-lint
-dill
-mako
-pyodbc
-tzlocal
-ply
-isort
-azure-identity
-datadog
-joblib
-google-cloud-pubsub
-asynctest
-marshmallow
-h11
-oauth2client
-absl-py
-pg8000
-secretstorage
-tenacity
-xlrd
-tornado
-xmltodict
-google-auth-httplib2
-jeepney
-prompt-toolkit
-ruamel-yaml
-threadpoolctl
-redshift-connector
-pyathena
-databricks-cli
-networkx
-sentry-sdk
-pbr
-tensorflow-serving-api
-tensorboard
-prometheus-client
-jsonpath-ng
-typing-inspect
-backoff
-ruamel-yaml-clib
-python-dotenv
-requests-aws4auth
-pkginfo
-grpc-google-iam-v1
-nest-asyncio
-defusedxml
-toolz
-ipython
-dnspython
-flake8
-tensorflow
-pyflakes
-traitlets
-progressbar2
-python-utils
-msrestazure
-elasticsearch
-cached-property
-simplejson
-pkgutil-resolve-name
-pytz-deprecation-shim
-google-cloud-secret-manager
-backports-zoneinfo
-entrypoints
-fonttools
-jaraco-classes
-awswrangler
-argcomplete
-psycopg2
-google-cloud-bigquery-storage
-jedi
-tomlkit
-pycryptodome
-mlflow
-sortedcontainers
-aioitertools
-libcst
-pytest-cov
-parso
-anyio
-gast
-pickleshare
-apache-beam
-aiofiles
-backcall
-lazy-object-proxy
-prometheus-flask-exporter
-tensorflow-estimator
-poetry-core
-opensearch-py
-setuptools-scm
-h5py
-html5lib
-babel
-querystring-parser
-lockfile
-black
-pyzmq
-azure-storage-common
-mysql-connector-python
-astroid
-bleach
-rich
-imageio
-smart-open
-cachecontrol
-pysocks
-configparser
-rfc3986
-google-pasta
-jupyter-client
-matplotlib-inline
-dataclasses
-pylint
-docopt
-fastavro
-ujson
-nltk
-cattrs
-azure-nspkg
-typed-ast
-marshmallow-enum
-nbconvert
-zope-interface
-unidecode
-azure-mgmt-resource
-requests-file
-ipykernel
-jsonpointer
-mock
-humanfriendly
-futures
-kubernetes
-google-cloud-dlp
-text-unidecode
-contextlib2
-aioconsole
-appdirs
-xlsxwriter
-selenium
-pandas-gbq
-mypy
-google-cloud-logging
-pydata-google-auth
-httpx
-applicationinsights
-types-cryptography
-jsonpickle
-apache-airflow
-shellingham
-jsonpatch
-notebook
-websockets
-jupyter-core
-numba
-httpcore
-keras
-pendulum
-uvloop
-keras-preprocessing
-typing
-distro
-mistune
-poetry
-httptools
-aenum
-azure-mgmt-core
-opt-einsum
-cleo
-seaborn
-statsmodels
-boto
-debugpy
-uvicorn
-asgiref
-graphviz
-confluent-kafka
-commonmark
-send2trash
-llvmlite
-ipython-genutils
-gspread
-tensorboard-plugin-wit
-starlette
-pylev
-pysftp
-crashtest
-pytzdata
-nbformat
-cachy
-emoji
-flatbuffers
-shapely
-fastapi
-altair
-python-slugify
-xgboost
-thrift
-watchtower
-retry
-nbclient
-opencensus
-opencensus-context
-fastjsonschema
-kafka-python
-uamqp
-torch
-tensorboard-data-server
-azure-mgmt-storage
-grpcio-tools
-patsy
-django
-blinker
-colorlog
-gremlinpython
-azure-keyvault-secrets
-ijson
-retrying
-transformers
-semver
-enum34
-pytest-runner
-gcsfs
-pydot
-pygithub
-avro-python3
-snowflake-sqlalchemy
-lightgbm
-exceptiongroup
-click-plugins
-ipywidgets
-plotly
-widgetsnbextension
-pandocfilters
-sagemaker
-python-editor
-responses
-pathlib2
-arrow
-argon2-cffi
-fuzzywuzzy
-async-generator
-sphinx
-tokenizers
-python-http-client
-azure-mgmt-keyvault
-slack-sdk
-croniter
-snowballstemmer
-azure-keyvault
-astunparse
-watchdog
-terminado
-jupyterlab-pygments
-stringcase
-azure-storage-queue
-tinycss2
-knack
-typer
-google-cloud-bigtable
-argon2-cffi-bindings
-azure-mgmt-authorization
-dulwich
-deepdiff
-pipenv
-bs4
-jupyterlab-widgets
-setproctitle
-dataclasses-json
-opencensus-ext-azure
-prettytable
-sendgrid
-pycountry
-azure-datalake-store
-pytest-mock
-inflection
-tldextract
-faker
-azure-mgmt-containerregistry
-azure-storage-file-datalake
-antlr4-python3-runtime
-python-json-logger
-opencv-python
-gevent
-slackclient
-atomicwrites
-sklearn
-azure-cosmos
-aws-cdk-aws-glue
-aws-cdk-aws-logs-destinations
-hvac
-brotli
-delta-spark
-azureml-core
-tensorflow-metadata
-scandir
-virtualenv-clone
-moto
-argparse
-hdfs
-azure-graphrbac
-dask
-torchvision
-typeguard
-multiprocess
-identify
-ecdsa
-sentencepiece
-kombu
-pywavelets
-azure-keyvault-keys
-celery
-pep517
-amqp
-nodeenv
-imagesize
-crcmod
-huggingface-hub
-maxminddb
-pyproj
-email-validator
-executing
-poetry-plugin-export
-asttokens
-flask-wtf
-overrides
-pre-commit
-zeep
-pycrypto
-pytest-forked
-authlib
-alabaster
-great-expectations
-execnet
-pytest-xdist
-cfgv
-astor
-wsproto
-azure-cosmosdb-table
-google-cloud-pubsublite
-stevedore
-python-magic
-google-cloud-datastore
-stack-data
-ezfnsetup
-geoip2
-unicodecsv
-flask-appbuilder
-python-jose
-azure-eventhub
-billiard
-constructs
-sphinxcontrib-serializinghtml
-vine
-azure-cosmosdb-nspkg
-flask-cors
-tensorflow-io-gcs-filesystem
-tox
-zope-event
-sphinxcontrib-htmlhelp
-sphinxcontrib-jsmath
-sphinxcontrib-applehelp
-sphinxcontrib-devhelp
-sphinxcontrib-qthelp
-pure-eval
-libclang
-ansible
-ordered-set
-convertdate
-xlwt
-scikit-image
-holidays
-spacy
-fasteners
-nose
-ipaddress
-marshmallow-sqlalchemy
-pymeeus
-gensim
-monotonic
-aws-sam-translator
-ratelimit
-trio
-azure-mgmt-network
-korean-lunar-calendar
-tblib
-freezegun
-outcome
-connexion
-dateparser
-orjson
-semantic-version
-azure-mgmt-nspkg
-ndg-httpsclient
-junit-xml
-trio-websocket
-cligj
-munch
-keras-applications
-jdcal
-geopy
-promise
-parsedatetime
-azure-mgmt-datalake-nspkg
-iso8601
-fire
-flask-sqlalchemy
-partd
-google-cloud-firestore
-humanize
-thinc
-sshtunnel
-locket
-tfx-bsl
-inflect
-distributed
-hijri-converter
-ua-parser
-pymssql
-pycron
-simple-salesforce
-python-gnupg
-python-levenshtein
-watergrid
-starkbank-ecdsa
-azure-mgmt-compute
-sqlalchemy-utils
-azure-cli-core
-pycairo
-azure-servicebus
-flask-login
-pathos
-djangorestframework
-srsly
-blis
-singledispatch
-google-cloud-spanner
-pygobject
-murmurhash
-avro
-pyperclip
-phonenumbers
-tensorflow-transform
+google-cloud-appengine-logging
+wasabi
+cymem
+fiona
+shortuuid
+preshed
+pox
+pywin32
+statsd
+ppft
+azure-mgmt-datalake-analytics
+pastel
+clikit
+jpype1
+motor
+netaddr
+apispec
+jira
+datetime
+azure-mgmt-datalake-store
+google-cloud-audit-log
+coloredlogs
+flask-caching
+texttable
+loguru
+shap
+geopandas
+build
+pypdf2
+sacremoses
+pika
+catalogue
+markdown-it-py
+types-requests
+pypandoc
+azure-cli-telemetry
+scp
+mysqlclient
+pytimeparse
+osqp
+geographiclib
+funcsigs
+azure-kusto-data
+flask-jwt-extended
+jsondiff
+deprecation
+python-docx
+types-pyyaml
+pdfminer-six
+db-dtypes
+invoke
+cerberus
+azure-mgmt-cosmosdb
+bokeh
+pybind11
+cheroot
+parameterized
+readme-renderer
+sh
+databricks-api
+azure-data-tables
+feedparser
+azure-mgmt-monitor
+azure-keyvault-certificates
+azure-batch
+azure-mgmt-msi
+tifffile
+azure-mgmt-recoveryservices
+mdit-py-plugins
+azure-mgmt-sql
+cssselect
+azure-mgmt-datafactory
+slicer
+hpack
+docstring-parser
+azure-mgmt-web
+prison
+azure-mgmt-containerinstance
+pytest-asyncio
+pip-tools
+azure-mgmt-signalr
+azure-mgmt-dns
+azure-mgmt-batch
+graphql-core
+azure-mgmt-rdbms
+python-daemon
+structlog
+imbalanced-learn
+pyhive
+validators
+aniso8601
+azure-mgmt-containerservice
+docker-pycreds
+incremental
+azure-mgmt-redis
+azure-mgmt-cdn
+azure-mgmt-trafficmanager
+setuptools-git
+protobuf3-to-dict
+tensorflow-hub
+h2
+smdebug-rulesconfig
+azure-mgmt-loganalytics
+azure-mgmt-iothub
+azure-mgmt-devtestlabs
+hyperframe
+flask-session
+azure-mgmt-servicebus
+flask-babel
+natsort
+azure-mgmt-eventhub
+jupyter-console
+azure-mgmt-marketplaceordering
+click-didyoumean
+ephem
+azure-mgmt-cognitiveservices
+autopep8
+azure-mgmt-search
+google-cloud-vision
+azure-mgmt-recoveryservicesbackup
+azure-mgmt-billing
+azure-mgmt-applicationinsights
+sgmllib3k
+hypothesis
+azure-mgmt-eventgrid
+cachelib
+twine
+apscheduler
+user-agents
+qtconsole
+mdurl
+azure-mgmt-servicefabric
+azure-mgmt-managementgroups
+azure-mgmt-iothubprovisioningservices
+types-urllib3
+azure-mgmt-reservations
+azure-mgmt-media
+backports-weakref
+azure-mgmt-advisor
+azure-mgmt-batchai
+qtpy
+zc-lockfile
+wtforms
+graphframes
+apache-airflow-providers-http
+azure-mgmt-consumption
+azure-mgmt-relay
+azure-loganalytics
+azure-mgmt-policyinsights
+dvc
+azure-mgmt-iotcentral
+cmdstanpy
+azure-mgmt-datamigration
+azure-mgmt-maps
+aws-xray-sdk
+jaraco-functools
+click-repl
+jaydebeapi
+azure-eventgrid
+jupyter
+yamllint
+requests-mock
+idna-ssl
+twisted
+opentelemetry-api
+sasl
+google-cloud-language
+opentelemetry-sdk
+imageio-ffmpeg
+pystan
+cherrypy
+google
+pathlib
+backports-tempfile
+makefun
+ddtrace
+pyserial
+contourpy
+sekkaybot
+google-cloud-videointelligence
+google-cloud-monitoring
+tempora
+lunarcalendar
+pygeohash
+sphinx-rtd-theme
+databricks-sql-connector
+netifaces
+spark-nlp
+portend
+kfp
+zict
+pyhocon
+mmh3
+fabric
+uritools
+elasticsearch-dsl
+django-cors-headers
+parse
+heapdict
+jaraco-text
+polling
+jaraco-collections
+ftfy
+frozendict
+linkify-it-py
+sympy
+aws-requests-auth
+tableauserverclient
+numexpr
+sarif-om
+mpmath
+hyperlink
+azure-cli
+pytorch-lightning
+jschema-to-python
+backports-csv
+jaraco-context
+pydeequ
+tld
+spacy-legacy
+resolvelib
+kfp-server-api
+pathy
+pytest-metadata
+strip-hints
+autocommand
+cx-oracle
+boto3-stubs
+ntlm-auth
+automat
+sqlalchemy-redshift
+python-multipart
+apache-airflow-providers-amazon
+sqlalchemy-jsonfield
+flask-compress
+azure-kusto-ingest
+jellyfish
+ipdb
+ansible-core
+cron-descriptor
+spark-sklearn
+python-consul
+moviepy
+discord-py
+pytest-timeout
+constantly
+pathtools
+pattern
+uc-micro-py
+python-jenkins
+hiredis
+proglog
+django-filter
+multi-key-dict
+langcodes
+pytest-html
+bitarray
+catboost
+python-snappy
+yapf
+strict-rfc3339
+google-apitools
+findspark
+apache-airflow-providers-common-sql
+testpath
+h3
+python-gitlab
+requests-ntlm
+service-identity
+gsutil
+w3lib
+spacy-loggers
+pyotp
+pyrogram
+azure-devops
+kfp-pipeline-spec
+aws-psycopg2
+xarray
+schema
+azure-appconfiguration
+pyaml
+azureml-dataprep
+yt-dlp
+python3-openid
+twilio
+azureml-sdk
+urllib3-secure-extra
+configobj
+google-cloud
+pyaes
+resampy
+influxdb
+omegaconf
+azureml-dataset-runtime
+bandit
+dotnetcore2
+onnxruntime
+cmd2
+marshmallow-oneofschema
+torchmetrics
+configargparse
+pytest-rerunfailures
+openapi-spec-validator
+backports-functools-lru-cache
+pyrfc3339
+azure-storage-file
+terminaltables
+dbt-core
+clickclick
+pycurl
+cookiecutter
+pyee
+pydocstyle
+timezonefinder
+redis-py-cluster
+curlify
+javaproperties
+rx
+elastic-transport
+mypy-boto3-rds
+opencv-python-headless
+mypy-boto3-s3
+kazoo
+ninja
+boltons
+sqlalchemy-json
+gspread-dataframe
+ray
+passlib
+tensorflow-text
+youtube-search-python
+dirac
+msgpack-python
+binaryornot
+cliff
+jinja2-time
+tensorflow-addons
+dpath
+jikanpy
+flower
+pydeprecate
+unittest-xml-reporting
+types-setuptools
+z3-solver
+azure-multiapi-storage
+azureml-dataprep-native
+urlextract
+jupyterlab-server
+fortnitepy
+swagger-ui-bundle
+factory-boy
+azure
+azureml-dataprep-rslex
+randomstuff-py
+fastparquet
+ciso8601
+types-pytz
+xxhash
+pydub
+fbprophet
+django-storages
+thrift-sasl
+bitstring
+yq
+apache-airflow-providers-sqlite
+bottle
+docker-compose
+django-extensions
+orderedmultidict
+apache-airflow-providers-imap
+azure-storage-file-share
+wandb
+google-cloud-kms
+apache-airflow-providers-ftp
+azure-mgmt-hdinsight
+setuptools-rust
+asyncio
+pgpy
+optuna
+rtree
+autopage
+azure-mgmt-privatedns
+azure-mgmt-apimanagement
+azure-mgmt-subscription
+azure-mgmt-sqlvirtualmachine
+hyperopt
+dynaconf
+azure-mgmt-security
+zstandard
+cfn-flip
+azure-mgmt-netapp
+azure-mgmt-kusto
+azureml-train-automl-client
+rapidfuzz
+azure-mgmt-managedservices
+jupyterlab
+flask-oidc
+pycares
+oldest-supported-numpy
+azure-mgmt-imagebuilder
+azure-mgmt-synapse
+azure-mgmt-appconfiguration
+azure-mgmt-botservice
+s3cmd
+onnx
+azure-mgmt-deploymentmanager
+azure-synapse-artifacts
+azureml-pipeline
+mlxtend
+azure-synapse-spark
+azure-storage
+flask-admin
+facebook-business
+azure-mgmt-redhatopenshift
+toposort
+reportlab
+flask-openid
+cramjam
+azure-synapse-accesscontrol
+google-ads
+azure-keyvault-administration
+zope-deprecation
+discord
+jupyter-server
+azure-mgmt-databoxedge
+pyfarmhash
+tgcrypto
+scapy
+json5
+types-python-dateutil
+azure-mgmt-extendedlocation
+koalas
+azure-mgmt-servicefabricmanagedclusters
+opentracing
+azure-cli-nspkg
+pandasql
+azure-synapse-managedprivateendpoints
+mutagen
+aiodns
+plac
+azure-mgmt-servicelinker
+portpicker
+atlassian-python-api
+blessed
+boxsdk
+vcrpy
+azureml-train-core
+webob
+openapi-schema-validator
+pyhamcrest
+robotframework
+json-merge-patch
+mergedeep
+analytics-python
+agate
+elementpath
+expiringdict
+apache-airflow-providers-cncf-kubernetes
+netcdf4
+google-cloud-resource-manager
+googlemaps
+appnope
+immutables
+atlassian-jwt-auth
+cftime
+dockerpty
+botocore-stubs
+pypika
+pyelftools
+types-protobuf
+aioredis
+leather
+jarowinkler
+google-cloud-aiplatform
+logbook
+apache-airflow-providers-google
+coreapi
+cytoolz
+coreschema
+itypes
+checkov
+einops
+parsel
+concurrent-log-handler
+langdetect
+mysql-connector
+hologram
+gitdb2
+pmdarima
+htmlmin
+pure-sasl
+sentence-transformers
+pymsteams
+raven
+imdbpy
+cmaes
+opentelemetry-semantic-conventions
+azure-mgmt
+stripe
+voluptuous
+pyhcl
+pynamodb
+contextvars
+html2text
+flask-swagger
+python-keystoneclient
+slacker
+pytest-django
+azure-mgmt-logic
+minio
+parse-type
+mashumaro
+mkdocs-material
+pkgconfig
+pyorc
+azure-servicemanagement-legacy
+azure-servicefabric
+azure-mgmt-scheduler
+python-nvd3
+py-cpuinfo
+cinemagoer
+azure-mgmt-notificationhubs
+ldap3
+pyhumps
+python-crfsuite
+blessings
+lz4
+django-debug-toolbar
+uuid
+pydispatcher
+azure-applicationinsights
+hstspreload
+waitress
+minimal-snowplow-tracker
+wget
+clickhouse-driver
+pydash
+azure-mgmt-commerce
+xmlschema
+azure-mgmt-powerbiembedded
+youtube-search
+graphql-relay
+azure-mgmt-managementpartner
+azure-mgmt-hanaonazure
+azure-mgmt-machinelearningcompute
+bracex
+supervisor
+youtube-dl
+collections-extended
+pympler
+graphene
+cerberus-python-client
+kaleido
+zthreading
+scrapy
+pygsheets
+cmake
+eth-hash
+queuelib
+dbt-extractor
+uwsgi
+azure-mgmt-devspaces
+ccxt
+tensorflow-datasets
+aws-cdk-core
+googletrans
+faiss-cpu
+datasets
+furl
+pytest-localserver
+types-six
+aws-sam-cli
+grpcio-gcp
+mypy-boto3-redshift-data
+apache-airflow-providers-snowflake
+django-redis
+schedule
+looker-sdk
+pyvmomi
+oyaml
+haversine
+timeout-decorator
+tensorflow-probability
+intervaltree
+python-socketio
+imagehash
+ecos
+pyspnego
+librosa
+dbx
+datadog-api-client
+python-box
+nbclassic
+yappi
+snakebite-py3
+annoy
+python-engineio
+newrelic
+prophet
+qdldl
